--- a/resources/sass/base.sass
+++ b/resources/sass/base.sass
@@ -1,6 +1,109 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap')
+
+*
+  font-family: 'Montserrat', sans-serif
+  margin: 0
+  padding: 0
+  overflow: hidden
+
+body
+  font-size: 18px
+
+input
+  width: 50%
+  height: 25px
+  border: none
+  border-bottom: 2px solid grey
+  outline: none
+
+button
+  background: none
+  font-family: 'Montserrat', sans-serif
+  width: 50%
+  //height: 50px
+  padding: 10px 15px
+  border: none
+  outline: none
+  transition: border-bottom-width ease-in .2s
+
+  &:hover
+    border-bottom: 2px solid grey
+
 .show
   opacity: 1
 
 .hide
+  height: 0
   opacity: 0
   overflow: hidden
+
+.section-container
+  display: flex
+  flex-flow: column nowrap
+
+.section-header
+  display: grid
+  grid: "title btn" / 5fr auto
+
+  h2
+    text-align: center
+    margin: 0
+    padding: 10px 15px
+
+  i
+    text-align: center
+    place-self: center
+    padding: 10px 10px
+
+.section-list
+  display: flex
+  flex-flow: column nowrap
+  place-self: center
+  width: 80%
+
+.section-input-group
+  display: flex
+  flex-flow: column nowrap
+  place-self: center
+  align-items: center
+  width: 80%
+
+.task-item-group
+  display: grid
+  grid: "content icons" / 5fr auto
+
+  li
+    h3
+      padding: 10px 15px
+
+    p
+      padding: 10px 15px
+
+  .icon-group
+    display: flex
+    flex-flow: column
+    place-self: center
+
+    i
+      text-align: center
+      place-self: center
+      padding: 3px 3px
+
+#content-wrapper
+  display: grid
+  grid: "calendar calendar" 50vh "todo motivation" 25vh "goals happiness" 25vh / 1fr 1fr
+
+#calendar-section
+  grid-area: calendar
+
+#todo-section
+  grid-area: todo
+
+#goals-section
+  grid-area: goals
+
+#motivation-section
+  grid-area: motivation
+
+#happiness-section
+  grid-area: happiness
