Added time inputs to the calendar section.

--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -1,13 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap')
-
-*
-  font-family: 'Montserrat', sans-serif
-  margin: 0
-  padding: 0
-  overflow: hidden
-
-body
-  font-size: 18px
+@import "partials/section"
+@import "partials/base"
 
 input
   width: 50%
@@ -20,7 +13,6 @@ button
   background: none
   font-family: 'Montserrat', sans-serif
   width: 50%
-  //height: 50px
   padding: 10px 15px
   border: none
   outline: none
@@ -36,37 +28,6 @@ button
   height: 0
   opacity: 0
   overflow: hidden
-
-.section-container
-  display: flex
-  flex-flow: column nowrap
-
-.section-header
-  display: grid
-  grid: "title btn" / 5fr auto
-
-  h2
-    text-align: center
-    margin: 0
-    padding: 10px 15px
-
-  i
-    text-align: center
-    place-self: center
-    padding: 10px 10px
-
-.section-list
-  display: flex
-  flex-flow: column nowrap
-  place-self: center
-  width: 80%
-
-.section-input-group
-  display: flex
-  flex-flow: column nowrap
-  place-self: center
-  align-items: center
-  width: 80%
 
 .task-item-group
   display: grid
