--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,23 @@ body {
   font-size: 18px;
 }
 
+#sidebar {
+  width: 100vw;
+  height: 10vh;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+#profile-img {
+  border: 1px solid #ddd;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  padding: 5px;
+  margin: 5px;
+}
+
 .section-container {
   display: flex;
   flex-flow: column nowrap;
