--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,11 +11,20 @@ body {
 }
 
 #sidebar {
-  width: 100vw;
-  height: 10vh;
+  width: 20vw;
+  height: 100vh;
   position: absolute;
   top: 20px;
   left: 20px;
+}
+
+#sidemenu {
+  background-color: gray;
+}
+
+.sidemenu-item {
+  display: block;
+  padding: 20px;
 }
 
 #profile-img {
@@ -23,7 +32,7 @@ body {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  padding: 5px;
+  padding: 20px;
   margin: 5px;
 }
 
