--- a/resources/sass/partials/_sidebar.sass
+++ b/resources/sass/partials/_sidebar.sass
@@ -1,14 +1,22 @@
 #sidebar
-    width: 100vw
-    height: 10vh
+    width: 20vw
+    height: 100vh
     position: absolute
     top: 20px
     left: 20px
+
+
+#sidemenu
+    background-color: gray
+
+.sidemenu-item
+    display: block
+    padding: 20px
 
 #profile-img
     border: 1px solid #ddd
     width: 50px
     height: 50px
     border-radius: 50%
-    padding: 5px
+    padding: 20px
     margin: 5px
