--- a/resources/sass/partials/_sidebar.sass
+++ b/resources/sass/partials/_sidebar.sass
@@ -2,18 +2,20 @@
     width: 20vw
     height: 100vh
     position: absolute
-    top: 20px
-    left: 20px
-
+    // top: 20px
+    // left: 20px
 
 #sidemenu
     background-color: gray
+    height: 100vh
 
 .sidemenu-item
     display: block
     padding: 20px
 
 #profile-img
+    top: 20px
+    left: 20px
     border: 1px solid #ddd
     width: 50px
     height: 50px
