--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,23 +10,33 @@ body {
   font-size: 18px;
 }
 
-#sidebar {
+#side-bar {
+  display: flex;
+  flex-flow: column nowrap;
   width: 20vw;
   height: 100vh;
   position: absolute;
 }
-
-#sidemenu {
-  background-color: gray;
-  height: 100vh;
+#side-bar button {
+  place-self: center;
 }
 
-.sidemenu-item {
-  display: block;
-  padding: 20px;
+#side-menu {
+  display: flex;
+  flex-flow: column nowrap;
+  align-self: center;
+  align-items: center;
+  background-color: lightgrey;
+  height: 100%;
+  width: 100%;
+}
+#side-menu li {
+  text-align: center;
+  padding: 10px 15px;
 }
 
 #profile-img {
+  background-image: url("../img/barack_obama.jpg");
   top: 20px;
   left: 20px;
   border: 1px solid #ddd;
@@ -34,7 +44,7 @@ body {
   height: 50px;
   border-radius: 50%;
   padding: 20px;
-  margin: 5px;
+  margin: 10px 15px;
 }
 
 .section-container {
