--- a/resources/sass/partials/_sidebar.sass
+++ b/resources/sass/partials/_sidebar.sass
@@ -1,24 +1,35 @@
-#sidebar
-    width: 20vw
-    height: 100vh
-    position: absolute
-    // top: 20px
-    // left: 20px
+$profile-img-dir: '../img/barack_obama.jpg'
 
-#sidemenu
-    background-color: gray
-    height: 100vh
+#side-bar
+  display: flex
+  flex-flow: column nowrap
+  width: 20vw
+  height: 100vh
+  position: absolute
 
-.sidemenu-item
-    display: block
-    padding: 20px
+  button
+    place-self: center
+
+#side-menu
+  display: flex
+  flex-flow: column nowrap
+  align-self: center
+  align-items: center
+  background-color: lightgrey
+  height: 100%
+  width: 100%
+
+  li
+    text-align: center
+    padding: 10px 15px
 
 #profile-img
-    top: 20px
-    left: 20px
-    border: 1px solid #ddd
-    width: 50px
-    height: 50px
-    border-radius: 50%
-    padding: 20px
-    margin: 5px
+  background-image: url($profile-img-dir)
+  top: 20px
+  left: 20px
+  border: 1px solid #ddd
+  width: 50px
+  height: 50px
+  border-radius: 50%
+  padding: 20px
+  margin: 10px 15px
