--- a/resources/sass/partials/_sidebar.sass
+++ b/resources/sass/partials/_sidebar.sass
@@ -23,6 +23,26 @@ $profile-img-dir: '../img/barack_obama.jpg'
     text-align: center
     padding: 10px 15px
 
+#team-section
+  display: flex
+  flex-flow: column nowrap
+  align-items: center
+
+  h3
+    text-align: center
+
+#team-input-group
+  display: flex
+  flex-flow: column nowrap
+  align-items: center
+
+  p
+    padding: 10px 15px
+
+  input
+    margin: 5px 0
+    padding: 10px 15px
+
 #profile-img
   background-image: url($profile-img-dir)
   top: 20px
