Added color to the Items

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,12 @@ body {
 .item-group {
   display: grid;
   grid: "content icons" "input-group icons"/5fr auto;
+  background-color: #60CF95;
+  border-radius: 20px;
+}
+.item-group li .item-content {
+  background-color: #53b582;
+  border-radius: 20px;
 }
 .item-group li h3 {
   padding: 10px 15px;
