--- a/resources/sass/partials/_item.sass
+++ b/resources/sass/partials/_item.sass
@@ -1,7 +1,14 @@
 .item-group
   display: grid
   grid: "content icons" "input-group icons" / 5fr auto
+  background-color: #60CF95
+  border-radius: 20px
   li
+
+    .item-content
+      background-color: #53b582
+      border-radius: 20px
+
     h3
       padding: 10px 15px
 
