--- a/resources/sass/partials/_item.sass
+++ b/resources/sass/partials/_item.sass
@@ -1,6 +1,7 @@
 .item-group
   display: grid
   grid: "content icons" "input-group icons" / 5fr auto
+  margin: 2px
   background-color: #60CF95
   border-radius: 20px
   li
