Added scrolling to section lists.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,10 +66,9 @@ body {
 }
 
 .section-list {
-  display: flex;
-  flex-flow: column nowrap;
-  place-self: center;
   width: 80%;
+  max-height: 200px;
+  overflow: auto;
 }
 
 .section-input-group {
