--- a/resources/sass/partials/_section.sass
+++ b/resources/sass/partials/_section.sass
@@ -18,10 +18,9 @@
     padding: 10px 10px
 
 .section-list
-  display: flex
-  flex-flow: column nowrap
-  place-self: center
   width: 80%
+  max-height: 200px
+  overflow: auto
 
 .section-input-group
   display: flex
