--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,11 @@
 
 body {
   font-size: 18px;
+  background: linear-gradient(90deg, lightsteelblue 50%, antiquewhite 50%);
+}
+
+.material-icons {
+  font-size: 30px;
 }
 
 .item-group {
@@ -144,11 +149,6 @@ input {
   border: none;
   border-bottom: 2px solid grey;
   outline: none;
-}
-
-body {
-  font-size: 18px;
-  background: linear-gradient(90deg, lightsteelblue 50%, antiquewhite 50%);
 }
 
 button {
