--- a/resources/sass/partials/_base.sass
+++ b/resources/sass/partials/_base.sass
@@ -6,3 +6,7 @@
 
 body
   font-size: 18px
+  background: linear-gradient(90deg, lightsteelblue 50%, antiquewhite 50%)
+
+.material-icons
+  font-size: 30px
