--- a/resources/sass/partials/_base.sass
+++ b/resources/sass/partials/_base.sass
@@ -1,3 +1,6 @@
+$background-left: #add8e6
+$background-right: #faebd7
+
 *
   font-family: 'Montserrat', sans-serif
   margin: 0
@@ -6,7 +9,7 @@
 
 body
   font-size: 18px
-  background: linear-gradient(90deg, lightsteelblue 50%, antiquewhite 50%)
+  background: linear-gradient(90deg, $background-left 50%, $background-right 50%)
 
 .material-icons
   font-size: 30px
