--- a/resources/sass/partials/_sidebar.sass
+++ b/resources/sass/partials/_sidebar.sass
@@ -7,6 +7,11 @@ $profile-img-dir: '../img/barack_obama.jpg'
   height: 100vh
   position: absolute
 
+  #side-menu-btn
+    margin: 10px 15px
+    position: fixed
+    z-index: 2
+
   button
     place-self: center
 
