--- a/resources/sass/partials/_item.sass
+++ b/resources/sass/partials/_item.sass
@@ -2,8 +2,11 @@ $item-primary: #60CF95
 $item-secondary: #53b582
 
 .item-group
-  background-color: $item-secondary
+  display: flex
+  flex-flow: column nowrap
+  justify-content: space-between
   position: relative
+  background-color: $item-secondary
   margin: 2px
   min-height: 125px
   border-radius: 20px
