--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap')
 @import "partials/base"
+@import "partials/calendar"
 @import "partials/item"
 @import "partials/section"
 @import "partials/sidebar"
