--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,13 +17,20 @@ body {
 }
 
 #days-group {
-  display: flex;
-  flex-flow: row wrap;
+  display: grid;
+  grid-template-columns: 7fr 7fr 7fr 7fr 7fr 7fr 7fr;
+  grid-template-rows: 4fr 4fr 4fr 4fr;
+  grid-auto-flow: row;
+  place-self: center;
+  margin: 10px 15px;
 }
 
+.calendar-day {
+  width: 75px;
+  height: 75px;
+}
 .calendar-day p {
-  max-width: 2vw;
-  max-height: 2vh;
+  text-align: center;
   margin: 0;
   padding: 0;
 }
