--- a/resources/sass/partials/_section.sass
+++ b/resources/sass/partials/_section.sass
@@ -2,6 +2,7 @@
   display: flex
   flex-flow: column nowrap
 
+// todo - move "plus" icon next to header text
 .section-header
   display: grid
   grid: "title btn" / 5fr auto
