--- a/resources/sass/partials/_today.sass
+++ b/resources/sass/partials/_today.sass
@@ -1,5 +1,5 @@
 #time-block-list
-  margin: 10px 15px
+  padding: 10px 15px
   overflow-y: auto
 
 .time-block-group
@@ -19,12 +19,12 @@
     border-top: 2px solid black
     border-bottom: 2px solid grey
 
-    //&.time-block-top
-    //  width: 100%
-    //  height: 100%
-    //  border-top: 2px solid black
-    //
-    //&.time-block-bottom
-    //  width: 100%
-    //  height: 100%
-    //  border-top: 2px solid black
+//&.time-block-top
+//  width: 100%
+//  height: 100%
+//  border-top: 2px solid black
+//
+//&.time-block-bottom
+//  width: 100%
+//  height: 100%
+//  border-top: 2px solid black
