--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,7 @@ body {
 .section-header {
   display: grid;
   grid: "title btn"/5fr auto;
+  min-height: 50px;
   margin: 10px 15px;
 }
 .section-header h2 {
