--- a/resources/sass/partials/_calendar.sass
+++ b/resources/sass/partials/_calendar.sass
@@ -2,6 +2,10 @@
   display: flex !important
   flex-flow: row nowrap
   align-content: space-between
+  place-self: center
+
+  h2
+    min-width: 200px
 
 #days-group
   display: grid
