--- a/resources/sass/partials/_item.sass
+++ b/resources/sass/partials/_item.sass
@@ -44,3 +44,18 @@ $item-secondary: #53b582
 
   button
     width: 100%
+
+.today-item-group
+  display: flex
+  flex-flow: column nowrap
+  justify-content: flex-start
+  background-color: $item-secondary
+  border-radius: 20px
+
+  h3
+    background-color: $item-primary
+    padding: 10px 15px
+    border-radius: 20px
+
+  p
+    padding: 10px 15px
