--- a/resources/sass/partials/_today.sass
+++ b/resources/sass/partials/_today.sass
@@ -5,7 +5,6 @@
 .time-block-group
   display: flex
   flex-flow: row nowrap
-  //min-height: 50px
   margin: 30px 15px
 
   .time-block-time
@@ -13,18 +12,8 @@
     min-width: 100px
 
   .time-block-display
-    //display: flex
-    //flex-flow: column nowrap
+    display: flex
+    flex-flow: row nowrap
     width: 100%
     border-top: 2px solid black
     border-bottom: 2px solid grey
-
-//&.time-block-top
-//  width: 100%
-//  height: 100%
-//  border-top: 2px solid black
-//
-//&.time-block-bottom
-//  width: 100%
-//  height: 100%
-//  border-top: 2px solid black
