--- a/resources/sass/partials/_item.sass
+++ b/resources/sass/partials/_item.sass
@@ -50,12 +50,13 @@ $item-secondary: #53b582
   flex-flow: column nowrap
   justify-content: flex-start
   background-color: $item-secondary
-  border-radius: 20px
+  min-height: 50px
+  border-radius: 15px
 
   h3
     background-color: $item-primary
-    padding: 10px 15px
-    border-radius: 20px
+    padding: 5px 7px
+    border-radius: 15px
 
   p
-    padding: 10px 15px
+    padding: 5px 7px
