--- a/resources/sass/partials/_today.sass
+++ b/resources/sass/partials/_today.sass
@@ -5,15 +5,20 @@
 .time-block-group
   display: flex
   flex-flow: row nowrap
-  margin: 30px 15px
+  margin: 15px
 
   .time-block-time
     text-align: center
-    min-width: 100px
+    align-self: center
+    padding-right: 5px
+    min-width: 60px
 
   .time-block-display
     display: flex
     flex-flow: row nowrap
+    align-items: center
+    justify-content: center
     width: 100%
+    min-height: 50px
     border-top: 2px solid black
     border-bottom: 2px solid grey
