--- a/resources/sass/partials/_calendar.sass
+++ b/resources/sass/partials/_calendar.sass
@@ -16,10 +16,17 @@
   margin: 10px 15px
 
 .calendar-day
-  width: 75px
-  height: 75px
+  display: flex
+  justify-content: center
+  align-items: center
+  width: 60px
+  height: 60px
 
   p
     text-align: center
     margin: 0
     padding: 0
+
+  &.selected
+    background-color: orange
+    border-radius: 50%
