--- a/resources/sass/partials/_item.sass
+++ b/resources/sass/partials/_item.sass
@@ -20,6 +20,27 @@ $item-secondary: #53b582
   p
     padding: 10px 15px
 
+  input
+    font-size: 20px !important
+    width: auto !important
+    height: auto !important
+    border: none !important
+
+  input.title-edit
+    background-color: $item-primary
+    padding: 10px 15px
+    border-radius: 20px
+    outline: none
+
+  input.desc-edit
+    padding: 10px 15px
+    background: none !important
+    outline: none
+
+  button
+    font-size: 20px !important
+    align-self: center
+
 .options-group
   display: flex
   flex-flow: column
