--- a/resources/sass/partials/_item.sass
+++ b/resources/sass/partials/_item.sass
@@ -37,6 +37,17 @@ $item-secondary: #53b582
     background: none !important
     outline: none
 
+  input.start-edit
+    background-color: $item-primary
+    padding: 10px 15px
+    border-radius: 20px
+    outline: none
+
+  input.end-edit
+    padding: 10px 15px
+    background: none !important
+    outline: none
+
   button
     font-size: 20px !important
     align-self: center
