--- a/resources/sass/partials/_item.sass
+++ b/resources/sass/partials/_item.sass
@@ -26,31 +26,10 @@ $item-secondary: #53b582
     height: auto !important
     border: none !important
 
-  input.title-edit
-    background-color: $item-primary
-    padding: 10px 15px
-    border-radius: 20px
-    outline: none
-
-  input.desc-edit
-    padding: 10px 15px
-    background: none !important
-    outline: none
-
-  input.start-edit
-    background-color: $item-primary
-    padding: 10px 15px
-    border-radius: 20px
-    outline: none
-
-  input.end-edit
-    padding: 10px 15px
-    background: none !important
-    outline: none
-
   button
-    font-size: 20px !important
+    font-size: 18px !important
     align-self: center
+    width: 100%
 
 .options-group
   display: flex
@@ -67,16 +46,6 @@ $item-secondary: #53b582
     margin: 2px 2px
     padding: 3px 3px
 
-.input-group
-  width: 100%
-
-  input
-    width: 100%
-    padding: 10px 15px
-
-  button
-    width: 100%
-
 .today-item-group
   display: flex
   flex-flow: column nowrap
@@ -92,3 +61,38 @@ $item-secondary: #53b582
 
   p
     padding: 5px 7px
+
+.item-title-input
+  background-color: $item-primary
+  min-height: 25px
+  padding: 10px 15px
+  border-radius: 20px
+  outline: none
+
+.item-body-input
+  min-height: 25px
+  padding: 10px 15px
+  background: none !important
+  outline: none
+
+//input.title-edit
+//  background-color: $item-primary
+//  padding: 10px 15px
+//  border-radius: 20px
+//  outline: none
+//
+//input.desc-edit
+//  padding: 10px 15px
+//  background: none !important
+//  outline: none
+//
+//input.start-edit
+//  background-color: $item-primary
+//  padding: 10px 15px
+//  border-radius: 20px
+//  outline: none
+//
+//input.end-edit
+//  padding: 10px 15px
+//  background: none !important
+//  outline: none
