Migrated time block element to TimeBlock component.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -265,7 +265,7 @@ body {
   padding-right: 5px;
   min-width: 60px;
 }
-.time-block-group .time-block-display {
+.time-block-group .time-block-item-display {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
