--- a/resources/sass/partials/_today.sass
+++ b/resources/sass/partials/_today.sass
@@ -13,7 +13,7 @@
     padding-right: 5px
     min-width: 60px
 
-  .time-block-display
+  .time-block-item-display
     display: flex
     flex-flow: row nowrap
     align-items: center
