--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,6 +183,24 @@ body {
   width: 100%;
 }
 
+.menu-item-group {
+  background: ghostwhite;
+  padding: 0 !important;
+  border: 3px solid ghostwhite;
+  border-radius: 15px;
+}
+.menu-item-group h3 {
+  text-align: center;
+  background: ghostwhite;
+  padding: 5px 7px;
+  border-radius: 15px;
+}
+.menu-item-group p {
+  text-align: center;
+  background: lightgray;
+  padding: 5px 7px;
+}
+
 #side-menu-btn {
   margin: 10px 15px;
   position: fixed;
