--- a/resources/sass/partials/_sidebar.sass
+++ b/resources/sass/partials/_sidebar.sass
@@ -1,5 +1,24 @@
 $profile-img-dir: '../img/barack_obama.jpg'
 
+.menu-item-group
+  background: ghostwhite
+  padding: 0 !important
+  border: 3px solid ghostwhite
+  border-radius: 15px
+
+  h3
+    text-align: center
+    background: ghostwhite
+    //width: 100%
+    padding: 5px 7px
+    border-radius: 15px
+
+  p
+    text-align: center
+    background: lightgray
+    //width: 100%
+    padding: 5px 7px
+
 #side-menu-btn
   margin: 10px 15px
   position: fixed
