--- a/css/style.css
+++ b/css/style.css
@@ -77,31 +77,15 @@ body {
   height: auto !important;
   border: none !important;
 }
-.item-group input.title-edit {
-  background-color: #60CF95;
-  padding: 10px 15px;
-  border-radius: 20px;
-  outline: none;
-}
-.item-group input.desc-edit {
-  padding: 10px 15px;
-  background: none !important;
-  outline: none;
-}
-.item-group input.start-edit {
-  background-color: #60CF95;
-  padding: 10px 15px;
-  border-radius: 20px;
-  outline: none;
-}
-.item-group input.end-edit {
-  padding: 10px 15px;
-  background: none !important;
-  outline: none;
-}
 .item-group button {
-  font-size: 20px !important;
+  font-size: 18px !important;
   align-self: center;
+  width: 100%;
+}
+
+.item-content {
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 .options-group {
@@ -120,17 +104,6 @@ body {
   padding: 3px 3px;
 }
 
-.input-group {
-  width: 100%;
-}
-.input-group input {
-  width: 100%;
-  padding: 10px 15px;
-}
-.input-group button {
-  width: 100%;
-}
-
 .today-item-group {
   display: flex;
   flex-flow: column nowrap;
@@ -146,6 +119,21 @@ body {
 }
 .today-item-group p {
   padding: 5px 7px;
+}
+
+.item-title-input {
+  background-color: #60CF95;
+  min-height: 25px;
+  padding: 10px 15px;
+  border-radius: 20px;
+  outline: none;
+}
+
+.item-body-input {
+  min-height: 25px;
+  padding: 10px 15px;
+  background: none !important;
+  outline: none;
 }
 
 .section-container {
@@ -180,15 +168,42 @@ body {
 .section-input-group {
   display: flex;
   flex-flow: column nowrap;
-  align-self: center;
-  width: 80%;
+  justify-content: flex-start;
+  position: relative;
+  background-color: #53b582;
+  margin: 2px;
+  min-height: 125px;
+  border-radius: 20px;
+  overflow: hidden;
 }
 .section-input-group input {
-  width: 100%;
-  padding: 10px 15px;
+  font-size: 20px !important;
+  width: auto !important;
+  height: auto !important;
+  border: none !important;
 }
 .section-input-group button {
+  font-size: 18px !important;
+  align-self: center;
   width: 100%;
+}
+
+.menu-item-group {
+  background: ghostwhite;
+  padding: 0 !important;
+  border: 3px solid ghostwhite;
+  border-radius: 15px;
+}
+.menu-item-group h3 {
+  text-align: center;
+  background: ghostwhite;
+  padding: 5px 7px;
+  border-radius: 15px;
+}
+.menu-item-group p {
+  text-align: center;
+  background: lightgray;
+  padding: 5px 7px;
 }
 
 #side-menu-btn {
@@ -261,6 +276,9 @@ body {
   padding: 10px 15px;
   overflow-y: auto;
 }
+#time-block-list li {
+  margin: 0 5px;
+}
 
 .time-block-group {
   display: flex;
@@ -273,7 +291,7 @@ body {
   padding-right: 5px;
   min-width: 60px;
 }
-.time-block-group .time-block-display {
+.time-block-group .time-block-item-display {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
