--- a/resources/sass/partials/_item.sass
+++ b/resources/sass/partials/_item.sass
@@ -31,6 +31,10 @@ $item-secondary: #53b582
     align-self: center
     width: 100%
 
+.item-content
+  display: flex
+  flex-flow: column nowrap
+
 .options-group
   display: flex
   flex-flow: column
@@ -74,25 +78,3 @@ $item-secondary: #53b582
   padding: 10px 15px
   background: none !important
   outline: none
-
-//input.title-edit
-//  background-color: $item-primary
-//  padding: 10px 15px
-//  border-radius: 20px
-//  outline: none
-//
-//input.desc-edit
-//  padding: 10px 15px
-//  background: none !important
-//  outline: none
-//
-//input.start-edit
-//  background-color: $item-primary
-//  padding: 10px 15px
-//  border-radius: 20px
-//  outline: none
-//
-//input.end-edit
-//  padding: 10px 15px
-//  background: none !important
-//  outline: none
